[package]
name = "jet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version  ="4",features = ["unstable-doc"]}
home = "0.5.4"
serde = {version = "1",features = ["derive"]}
toml = "0.5.9"
toml_edit = "0.15.0"
sys-info = "0.9.1"
tracing = {version = "0.1.37",features = ["log-always"]}
tracing-subscriber = {version = "0.3.16",features = ["env-filter"]}
tracing-appender = {version = "0.2.2"}
cmd_lib = "1.3.0"
version-compare = "0.1.0"